--- a/src/App.css
+++ b/src/App.css
@@ -2,9 +2,14 @@
 #root{
   height: 100%;
 }
+.ant-layout-header {
+  height: 64px;
+    line-height: 0;
 
+}
 .user_info {
   display: flex;
+  padding: 0 20px;
   height: 50px;
   align-items: center;
     justify-content: flex-end;
@@ -13,4 +18,5 @@
   width: 30px;
   height: 30px;
   border-radius: 50%;
+  margin-right: 10px;
 }
